drop mysql, use sqlite instead